[FIX] mail: improve attachment style slightly
PR https://github.com/odoo/odoo/pull/200099 improve visual
of attachments.

This commit makes a few adjustments to the style:
- proper spacing between items, using `.gap`, so that it
  works in all contexts without unwanted extra spacing
- overlay color is readable in dark theme
- a bit more rounded so it looks more pleasing
- improved alignment of overlay items
- reduced opacity of file size for better difference
  with filename
- properly truncate filename overlay to 2 lines max

X-original-commit: ac9c39527948b6592486824ff52a59af4972c3ef

--- a/addons/mail/static/src/core/common/core.scss
+++ b/addons/mail/static/src/core/common/core.scss
@@ -101,6 +101,10 @@ $o-discuss-talkingColor: lighten($success, 10%);
     padding-top: map-get($spacers, 1) / 2;
 }
 
+.o-p-1_5 {
+    padding: (map-get($spacers, 1) + map-get($spacers, 2)) / 2 !important;
+}
+
 .o-hover-text-underline:hover {
     text-decoration: underline;
 }
